--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,47 @@
-<%- include('header') -%> 
+<%- include('header') -%>
+
+<div class="container">
+    <div class="header-container">
+        <h1 class="header-text">About Us</h1>
+        <p class="header-subtext">Launched in 1997, Select 1 Group has become one of the fastest growing international,
+            premier vehicle logistics companies. Select 1 Group quickly filled a need in the automotive transport
+            marketplace with innovative and cost-effective transportation solutions.</p>
+    </div>
+    <div class="body-text-container">
+        <p class="body-text">
+            The Select 1 Group has since grown and provides excellent service in the three specialized and related areas
+            of Vehicle Transport, Mobile Exhibits and Logistical Solutions. Over the years, we have matured as a company
+            growing our technology and client services to better cater to our clients individual needs.
+            <br>
+            <br>
+            As an efficient company, leveraging technology at every turn, our customers always benefit with some of the
+            best pricing available in the industry.
+            <br>
+            <br>
+            We were one of the first companies to employ satellite tracking systems integrated into dispatching which
+            enables our customers to have real-time knowledge about where their shipment is at any moment. And, we’ve
+            continued our technology innovations over the years to improve every part of our business. Select 1 Group
+            has great technology and proven solutions, but it’s our ability to execute that makes the difference for our
+            customers.
+            <br>
+            <br>
+            We’ve learned that in the logistics business, it’s all about the people. From our executives to our drivers,
+            it’s critical that we listen to our customers and address their project concepts, issues and concerns in a
+            timely fashion.
+            <br>
+            <br>
+            We also pride ourselves on our customer service excellence. Call us and you will get straight through to a
+            helpful, friendly, experienced associate. There's nothing more rewarding for us than looking at a difficult
+            customer problem from all angles, and determining the best solution.
+            <br>
+            <br>
+            Over the years, we have matured as a company growing our technology, cost effectiveness and client services
+            to better cater to our clients individual needs.
+        </p>
+    </div>
+</div>
 
 
-<h1>About Us</h1>
 
 
 
@@ -9,6 +49,4 @@
 
 
 
-
-
-<%- include('footer') -%> 
+<%- include('footer') -%>
