--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -2,7 +2,7 @@
 
 <div class="contact-container container">
     <h1>Contact Us</h1>
-    <p class="contact-number">tel: 877.810.9700</p>
+    <p class="contact-number"><a href="tel:877-810-9700"</a>877-810-9700</p>
     <form action="/thankyou" method="">
         <div class="form-row">
             <div class="form-group col-md-6">
@@ -23,8 +23,8 @@
             <textarea rows="5" class="form-control" name="message" id="message"></textarea>
         </div>
         </div>
-        <div class="container">
-            <button type="submit" class="btn btn-primary btn-block">Send</button>
+        <div class="contact-btn-container">
+            <button type="submit" class="contact-btn">Send</button>
         </div>
     </form>
 </div>
