--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,8 +1,9 @@
-
+<div class=footer-container>
     <footer class="footer mt-auto py-3">
         <div class="container">
-            <span class="text-muted">An ISO 9001 Company. &copy Copyright Select 1 Group <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script>.</span>
-
+            <img src="/images/s1t-logo.png" alt="Select 1 Transport Logo" class="footer-img">
+            <span class="footer-text text-muted">An ISO 9001 Company. <i class="copyright far fa-copyright"></i> Copyright Select 1 Group <script type="text/javascript">var year = new Date();document.write(year.getFullYear());</script>.</span>
+        </div>
     </footer>
 </div>
 <script src="/js/main.js"></script>
