--- a/views/summary.ejs
+++ b/views/summary.ejs
@@ -35,7 +35,7 @@
 </script>
 <div class="container checkout-summary">
   <div class="card-deck mb-3 text-center">
-    <div class="card mb-4 shadow-sm">
+    <div class="card">
       <div class="card-header">
         <h4 class="my-0 font-weight-normal">Checkout Summary</h4>
       </div>
